--- a/rooappendixnav.html
+++ b/rooappendixnav.html
@@ -1,7 +1,7 @@
 <!-- rooappendixnav.html -->
 
 <div id="appendixnav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="miscellaneous">
             <img src="images/miscellaneous.jpg" title="Tool Box" alt="Tool Box">
         </figure>
