--- a/roobiologynav.html
+++ b/roobiologynav.html
@@ -1,6 +1,6 @@
 <!-- roobiologynav.html -->
 <div id="biology">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="biology">
             <img src="images/2Hearts.jpeg" title="Gallifreyan X-ray" alt="Gallifreyan X-ray" height="400">
         </figure>
