--- a/roochildrennav.html
+++ b/roochildrennav.html
@@ -1,6 +1,6 @@
 <!-- roochildrennav.html -->
 <div id="childrennav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="children">
             <img src="images/dr_rose_tardis.jpg" title="TARDIS, Rose, Doctor" alt="TARDIS, Rose, Doctor">
         </figure>
