--- a/roogallifreynav.html
+++ b/roogallifreynav.html
@@ -1,13 +1,16 @@
 <!-- roogallifreynav.html -->
 
 <div id="gallifreynav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure>
             <img src="images/gallifreyplanet1.jpg" title="The Planet Gallifrey" alt="Picture of Gallifrey">
         </figure>
         <ul>
             <li>
                 <a href="roogallifrey.html#location">Astrophysical Location</a>
+            </li>
+            <li>
+                <a href="roogallifrey.html#timezone">Rassilon Era</a>
             </li>
             <li>
                 <a href="roogallifrey.html#constellation">Home Constellation</a>
@@ -25,7 +28,7 @@
                 <a href="roogallifrey.html#animals">Animals</a>
             </li>
             <li>
-                <a href="roogallifrey.html#cats">Animals</a>
+                <a href="roogallifrey.html#cats">CATs</a>
             </li>
             <li>
                 <a href="roogallifrey.html#ancient">SHOBOGANS</a>
