--- a/roogovernmentnav.html
+++ b/roogovernmentnav.html
@@ -1,6 +1,6 @@
 <!-- roogovernmentnav.html -->
 <div id="governmentnav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="government">
             <img src="images/gallifreytimelord.jpg" alt="Gallifrey and Time Lord">
         </figure>
@@ -12,7 +12,7 @@
                 <a href="roogovernment.html#citadel">The Citadel</a>
             </li>
             <li>
-                <a href="roogovernment.html#president">The Head of the Presidency</a>
+                <a href="roogovernment.html#president">The Presidency</a>
             </li>
             <li>
                 <a href="roogovernment.html#chancellor">The Chancellor</a>
@@ -33,10 +33,19 @@
                 <a href="roogovernment.html#houses">The Great Houses</a>
             </li>
             <li>
+                <a href="roogovernment.html#dwatcher">The Department of the Watchers</a>
+            </li>
+            <li>
+                <a href="roogovernment.html#weal">The Order of the Weal</a>
+            </li>
+            <li>
                 <a href="roogovernment.html#cia">The Celestial Intervention Agency</a>
             </li>
             <li>
-                <a href="roogovernment.html#guard">The Chapter House Guard</a>
+                <a href="roogovernment.html#validium">Validium</a>
+            </li>
+            <li>
+                <a href="roogovernment.html#guard">The Chapterhouse Guard</a>
             </li>
             <li>
                 <a href="roogovernment.html#justice">Gallifreyan Justice</a>
