--- a/roolifedeathnav.html
+++ b/roolifedeathnav.html
@@ -1,6 +1,6 @@
 <!-- roolifedeathnav.html -->
 <div id="lifedeathnav">
-    <div class="table" >
+    <div class="table flex-container">
         <img src="images/crib.jpg" title="Gallifreyan Baby" alt="Gallifreyan Baby">
         <ul >
             <li>
@@ -29,7 +29,7 @@
             </li>
         </ul>
     </div>
-    <div class="table cf" id="culture">
+    <div class="table cf flex-container" id="culture">
         <img src="images/urn.jpg" title="Gallifreyan Urn" alt="Gallifreyan Urn">
         <ul>
             <li>
@@ -42,7 +42,10 @@
                 <a href="roolifedeath.html#death">Death</a>
             </li>
             <li>
-                <a href="roolifedeath.html#chronology">Measuring Time</a>
+                <a href="roolifedeath.html#chronology">Chronology</a>
+            </li>
+            <li>
+                <a href="roolifedeath.html#dating">Dating</a>
             </li>
             <li>
                 <a href="roolifedeath.html#holiday">Holidays</a>
