--- a/rootimeline1nav.html
+++ b/rootimeline1nav.html
@@ -1,7 +1,7 @@
 <!-- rootimeline1nav.html -->
 
 <div id="timeline1nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="darktimes">
             <img src="images/darktimes.jpg" title="The Dark Tower" alt="The Dark Tower">
         </figure>
