--- a/rootimeline2nav.html
+++ b/rootimeline2nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline2nav.html -->
 <div id="timeline2nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="legend">
             <img src="images/harmony.jpeg" title="Capturing the Eye of Harmony" alt="Capturing the Eye of Harmony">
         </figure>
