--- a/rootimeline3nav.html
+++ b/rootimeline3nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline3nav.html -->
 <div id="timeline3nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="middle">
             <img src="images/temple.jpeg" title="The Temple of the Fourth" alt="The Temple of the Fourth">
         </figure>
