--- a/rootimeline4nav.html
+++ b/rootimeline4nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline4nav.html -->
 <div id="timeline4nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="preclassic">
             <img src="images/docgallifrey.jpg" title="The First Doctor" alt="The First Doctor">
         </figure>
