--- a/rootimeline5nav.html
+++ b/rootimeline5nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline5nav.html -->
 <div id="timeline5nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="classic">
             <img src="images/doc1-7.jpg" title="The First Doctor" alt="The First Doctor">
         </figure>
