--- a/rootimeline6nav.html
+++ b/rootimeline6nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline6nav.html -->
 <div id="timeline6nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="prewar">
             <img src="images/deadromance.jpg" title="Dead Romance" alt="Bottle Universe Earth">
         </figure>
