--- a/rootimeline7nav.html
+++ b/rootimeline7nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline7nav.html -->
 <div id="timeline7nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="war">
             <img src="images/book1.jpg" title="The History of the Time War" alt="The History of the Time War">
         </figure>
