--- a/rootimeline8nav.html
+++ b/rootimeline8nav.html
@@ -1,6 +1,6 @@
 <!-- rootimeline8nav.html -->
 <div id="timeline8nav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure id="postwar">
             <img src="images/gallifreyreborn.jpg" title="Gallifrey Rises" alt="The Rebuilt Capitol">
         </figure>
