--- a/rootimelordnav.html
+++ b/rootimelordnav.html
@@ -1,6 +1,6 @@
 <!-- rootimelordnav.html -->
 <div id="timelordnav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure>
             <img src="images/innercouncil2.jpg" alt="Gallifrey and Time Lord">
         </figure>
