--- a/roowebnav.html
+++ b/roowebnav.html
@@ -1,6 +1,6 @@
 <!-- roowebnav.html -->
 <div id="webnav">
-    <div class="table cf">
+    <div class="table cf flex-container">
         <figure>
             <img src="images/timespiral.jpg" title="Time Spiral" alt="Time Spiral">
         </figure>
